# SeeCam

./: CMakeLists.txt  README.md  config.cfg
include/: seecam.hpp
python/: seecam_calib.py  seecam_config.json  seecam_simple.py
python/AVLcamera_capture/: Setup_AVL_Cam.py  avlcamera.py  common_types.py  main.py  runAVLCamera.py  sendcam.py  time.proto  v.py  wifi_client2.py
python/AVLcamera_capture/AutoVideoExposure/: TestAuto.py  cam.py  ctyp.py  test2.py  test3.py  test4.py  test5.py  test6.py  test7.py  test8.py  test9Blue.py  test9Red.py  vcap_v1.py
python/AVLcamera_capture/info/: alvium cam spec.md  readme.md
python/AVLcamera_capture/proto/: time_pb2.py
python/AVLcamera_capture/sample/: cv2sample.py  imencode1.py  vcap.py
python/AVLcamera_capture/tmp/: client.py  frq.py
src/: main.cpp  seecam.cpp
subscriber/: config.json  databuffer.py  hdf5_image_reader.py  hdf5_reader_main.py  image_saver.py  main.py  publisher.py  qtviz.py  subscriber.py
